--- a/Front/src/app/layout/app.topbar.component.html
+++ b/Front/src/app/layout/app.topbar.component.html
@@ -219,6 +219,7 @@
         [style]="{ width: '200px' }">
       </p-dropdown>
       <button pButton label="Optimize Layout" (click)="optimizeStoreLayout()" class="p-button-success" style="margin-top: 10px;"></button>
+      <button pButton label="Get product recommendations" (click)="productrecommendations()" class="p-button-success" style="margin-top: 10px;"></button>
     </div>
 
 
